--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 
 body {
   background-color: rgb(205, 242, 183);
+  font-family: "Kanit", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+
 }
 .socialIconsContainer {
   display: flex;
